--- a/gpu_experiment.ipynb
+++ b/gpu_experiment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1aee6691",
+   "id": "55dac066",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "34fbb057",
+   "id": "8ba0543e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2f01bc68",
+   "id": "b0e5e064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f7fd1193",
+   "id": "93e84fba",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9e562ea3",
+   "id": "fea7c541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53a7ef5a",
+   "id": "d822083b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af761510",
+   "id": "11165d07",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "43bbdc43",
+   "id": "a13c71e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "23b60487",
+   "id": "8d6e7f6d",
    "metadata": {},
    "outputs": [
     {
@@ -185,15 +185,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db4822e4",
+   "execution_count": 39,
+   "id": "270c24d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PGD\n"
+      "PGD\n",
+      "[Model loaded]\n",
+      "Acc: 0.00 %\n",
+      "adv model\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0fd1ba46",
+   "id": "d9a929ac",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "00fa342b",
+   "id": "fc8cd9ab",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7e05a48a",
+   "id": "79bd39d1",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12439c15",
+   "id": "99513576",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -311,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d099a63",
+   "id": "9301c1e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -319,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ee9ae2",
+   "id": "4673b4c0",
    "metadata": {},
    "outputs": [],
    "source": []
