experiment scratch set up

--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -69,50 +69,14 @@
    "source": [
     "model_name = \"resnet\"\n",
     "num_classes = 10\n",
-    "feature_extract = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e1d24c0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
-   "source": [
+    "feature_extract = True\n",
+    "\n",
     "model_transfer, input_size = initialize_model(model_name, num_classes, feature_extract, use_pretrained=True)\n",
     "train_dataset, val_dataset, train_loader, val_loader = CIFAR10(128, finetune = True, \n",
     "                                                               input_size = input_size, test_batch_size=128)\n",
     "classes = ('plane', 'car', 'bird', 'cat',\n",
     "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
     "device = \"cuda\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1675b9b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([128, 3, 224, 224])\n"
-     ]
-    }
-   ],
-   "source": [
-    "img, label = next(iter(train_loader))\n",
-    "print(img.shape)"
    ]
   },
   {
@@ -542,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2f7c616",
+   "id": "bb867a09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79347002",
+   "id": "335ab5b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc39583",
+   "id": "d0153121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adccc478",
+   "id": "414692d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61f404b",
+   "id": "c750e194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5753756a",
+   "id": "80ab71fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -764,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b5b1d9",
+   "id": "c85c6b87",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -772,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed8837c",
+   "id": "d8e7b3a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -780,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d306c67",
+   "id": "a39b1aca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -792,6 +756,75 @@
    "source": [
     "# TODO Compared with from scratch standard training and attacks "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17d035d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"resnet\"\n",
+    "num_classes = 10\n",
+    "feature_extract = False\n",
+    "\n",
+    "model_scratch, input_size = initialize_model(model_name, num_classes, feature_extract, use_pretrained=False)\n",
+    "train_dataset, val_dataset, train_loader, val_loader = CIFAR10(128, finetune = True, \n",
+    "                                                               input_size = input_size, test_batch_size=128)\n",
+    "classes = ('plane', 'car', 'bird', 'cat',\n",
+    "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
+    "device = \"cuda\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e62cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_scratch = model_scratch.to(device)\n",
+    "params_to_update = model_scratch.parameters()\n",
+    "\n",
+    "print(\"Params to learn:\")\n",
+    "if feature_extract:\n",
+    "    params_to_update = []\n",
+    "    for name,param in model_scratch.named_parameters():\n",
+    "        if param.requires_grad == True:\n",
+    "            params_to_update.append(param)\n",
+    "            print(\"\\t\",name)\n",
+    "else:\n",
+    "    for name,param in model_scratch.named_parameters():\n",
+    "        if param.requires_grad == True:\n",
+    "            print(\"\\t\",name)\n",
+    "\n",
+    "# Observe that all parameters are being optimized\n",
+    "optimizer_scratch = optim.SGD(params_to_update, lr=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d82480b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29fcc31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d185a27b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
