fixed to false use pretrained

--- a/Experment3_todo.ipynb
+++ b/Experment3_todo.ipynb
@@ -58,26 +58,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "17d035d7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet18-5c106cde.pth\" to /home/gm3044/.cache/torch/hub/checkpoints/resnet18-5c106cde.pth\n"
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz to ./datasets/CIFAR-100/cifar-100-python.tar.gz\n"
      ]
     },
     {
      "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.022341012954711914,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d5c65030555457ea6f636319302e140",
+       "model_id": "1b566f52707b4e6192f54bba8cdb6b37",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/44.7M [00:00<?, ?B/s]"
+       "0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -87,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n",
+      "Extracting ./datasets/CIFAR-100/cifar-100-python.tar.gz to ./datasets/CIFAR-100\n",
       "Files already downloaded and verified\n"
      ]
     }
@@ -97,9 +114,9 @@
     "num_classes = 100\n",
     "feature_extract = False\n",
     "\n",
-    "model_scratch, input_size = initialize_model(model_name, num_classes, feature_extract, use_pretrained=True)\n",
-    "train_dataset, val_dataset, train_loader, val_loader = CIFAR100(32, finetune = True, \n",
-    "                                                               input_size = input_size, test_batch_size=32)\n",
+    "model_scratch, input_size = initialize_model(model_name, num_classes, feature_extract, use_pretrained=False)\n",
+    "train_dataset, val_dataset, train_loader, val_loader = CIFAR100(128, finetune = True, \n",
+    "                                                               input_size = input_size, test_batch_size=128)\n",
     "# classes = ('plane', 'car', 'bird', 'cat',\n",
     "#            'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
     "device = \"cuda\""
@@ -107,23 +124,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "10e62cbe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "CUDA error: out of memory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_15239/2890981218.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_scratch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_scratch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mparams_to_update\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_scratch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Params to learn:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfeature_extract\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mto\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    610\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_floating_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_blocking\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 612\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    613\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    614\u001b[0m     def register_backward_hook(\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    357\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    358\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 359\u001b[0;31m             \u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    360\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    379\u001b[0m                 \u001b[0;31m# `with torch.no_grad():`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    380\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 381\u001b[0;31m                     \u001b[0mparam_applied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    382\u001b[0m                 \u001b[0mshould_use_set_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    383\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mshould_use_set_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mconvert\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m    608\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mconvert_to_format\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_floating_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_blocking\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemory_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_to_format\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 610\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_floating_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_blocking\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    612\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: out of memory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Params to learn:\n",
+      "\t conv1.weight\n",
+      "\t bn1.weight\n",
+      "\t bn1.bias\n",
+      "\t layer1.0.conv1.weight\n",
+      "\t layer1.0.bn1.weight\n",
+      "\t layer1.0.bn1.bias\n",
+      "\t layer1.0.conv2.weight\n",
+      "\t layer1.0.bn2.weight\n",
+      "\t layer1.0.bn2.bias\n",
+      "\t layer1.1.conv1.weight\n",
+      "\t layer1.1.bn1.weight\n",
+      "\t layer1.1.bn1.bias\n",
+      "\t layer1.1.conv2.weight\n",
+      "\t layer1.1.bn2.weight\n",
+      "\t layer1.1.bn2.bias\n",
+      "\t layer2.0.conv1.weight\n",
+      "\t layer2.0.bn1.weight\n",
+      "\t layer2.0.bn1.bias\n",
+      "\t layer2.0.conv2.weight\n",
+      "\t layer2.0.bn2.weight\n",
+      "\t layer2.0.bn2.bias\n",
+      "\t layer2.0.downsample.0.weight\n",
+      "\t layer2.0.downsample.1.weight\n",
+      "\t layer2.0.downsample.1.bias\n",
+      "\t layer2.1.conv1.weight\n",
+      "\t layer2.1.bn1.weight\n",
+      "\t layer2.1.bn1.bias\n",
+      "\t layer2.1.conv2.weight\n",
+      "\t layer2.1.bn2.weight\n",
+      "\t layer2.1.bn2.bias\n",
+      "\t layer3.0.conv1.weight\n",
+      "\t layer3.0.bn1.weight\n",
+      "\t layer3.0.bn1.bias\n",
+      "\t layer3.0.conv2.weight\n",
+      "\t layer3.0.bn2.weight\n",
+      "\t layer3.0.bn2.bias\n",
+      "\t layer3.0.downsample.0.weight\n",
+      "\t layer3.0.downsample.1.weight\n",
+      "\t layer3.0.downsample.1.bias\n",
+      "\t layer3.1.conv1.weight\n",
+      "\t layer3.1.bn1.weight\n",
+      "\t layer3.1.bn1.bias\n",
+      "\t layer3.1.conv2.weight\n",
+      "\t layer3.1.bn2.weight\n",
+      "\t layer3.1.bn2.bias\n",
+      "\t layer4.0.conv1.weight\n",
+      "\t layer4.0.bn1.weight\n",
+      "\t layer4.0.bn1.bias\n",
+      "\t layer4.0.conv2.weight\n",
+      "\t layer4.0.bn2.weight\n",
+      "\t layer4.0.bn2.bias\n",
+      "\t layer4.0.downsample.0.weight\n",
+      "\t layer4.0.downsample.1.weight\n",
+      "\t layer4.0.downsample.1.bias\n",
+      "\t layer4.1.conv1.weight\n",
+      "\t layer4.1.bn1.weight\n",
+      "\t layer4.1.bn1.bias\n",
+      "\t layer4.1.conv2.weight\n",
+      "\t layer4.1.bn2.weight\n",
+      "\t layer4.1.bn2.bias\n",
+      "\t fc.weight\n",
+      "\t fc.bias\n"
      ]
     }
    ],
@@ -149,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d82480b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_criterion = nn.CrossEntropyLoss()\n",
     "val_criterion = nn.CrossEntropyLoss()\n",
-    "PATH = './cifar_resnet_scratch.pth'\n",
+    "PATH = './cifar_resnet_scratch_100.pth'\n",
     "device = \"cuda\"\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "writer = SummaryWriter(\"Standard_Resnet_Scratch\")"
+    "writer = SummaryWriter(\"Standard_Resnet_Scratch_100\")"
    ]
   },
   {
@@ -167,7 +238,15 @@
    "execution_count": null,
    "id": "b29fcc31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [0/100]\t\n"
+     ]
+    }
+   ],
    "source": [
     "train(model_scratch, train_loader, train_criterion, val_loader, val_criterion, \n",
     "              optimizer_scratch, 100, writer, \n",
