--- a/Experment3_resnet18.ipynb
+++ b/Experment3_resnet18.ipynb
@@ -1069,7 +1069,19 @@
       "Epoch [82/100]\t\n",
       "Epoch [83/100]\t Training Loss: 1.024214739232417\t lr: 0.001\n",
       "Epoch [83/100]\t Validation Loss: 44.3292741896231\t lr: 0.001\n",
-      "Epoch [83/100]\t\n"
+      "Epoch [83/100]\t\n",
+      "Epoch [84/100]\t Training Loss: 1.011147218134702\t lr: 0.001\n",
+      "Epoch [84/100]\t Validation Loss: 58.87736062158512\t lr: 0.001\n",
+      "Epoch [84/100]\t\n",
+      "Epoch [85/100]\t Training Loss: 1.0134076037065451\t lr: 0.001\n",
+      "Epoch [85/100]\t Validation Loss: 55.223202379443975\t lr: 0.001\n",
+      "Epoch [85/100]\t\n",
+      "Epoch [86/100]\t Training Loss: 1.00167746693277\t lr: 0.001\n",
+      "Epoch [86/100]\t Validation Loss: 50.84031445467019\t lr: 0.001\n",
+      "Epoch [86/100]\t\n",
+      "Epoch [87/100]\t Training Loss: 0.9931559923969572\t lr: 0.001\n",
+      "Epoch [87/100]\t Validation Loss: 57.566104406042946\t lr: 0.001\n",
+      "Epoch [87/100]\t\n"
      ]
     }
    ],
