experiment 5 don+ documentation

--- a/Experment3_resnet18.ipynb
+++ b/Experment3_resnet18.ipynb
@@ -1081,7 +1081,10 @@
       "Epoch [86/100]\t\n",
       "Epoch [87/100]\t Training Loss: 0.9931559923969572\t lr: 0.001\n",
       "Epoch [87/100]\t Validation Loss: 57.566104406042946\t lr: 0.001\n",
-      "Epoch [87/100]\t\n"
+      "Epoch [87/100]\t\n",
+      "Epoch [88/100]\t Training Loss: 0.983651759069594\t lr: 0.001\n",
+      "Epoch [88/100]\t Validation Loss: 61.69178844403617\t lr: 0.001\n",
+      "Epoch [88/100]\t\n"
      ]
     }
    ],
