--- a/Experment3_resnet18.ipynb
+++ b/Experment3_resnet18.ipynb
@@ -1084,7 +1084,10 @@
       "Epoch [87/100]\t\n",
       "Epoch [88/100]\t Training Loss: 0.983651759069594\t lr: 0.001\n",
       "Epoch [88/100]\t Validation Loss: 61.69178844403617\t lr: 0.001\n",
-      "Epoch [88/100]\t\n"
+      "Epoch [88/100]\t\n",
+      "Epoch [89/100]\t Training Loss: 0.9780394122423723\t lr: 0.001\n",
+      "Epoch [89/100]\t Validation Loss: 47.0436958119839\t lr: 0.001\n",
+      "Epoch [89/100]\t\n"
      ]
     }
    ],
