--- a/Experment5.ipynb
+++ b/Experment5.ipynb
@@ -10,12 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "63d26265",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch Version:  1.7.1+cu110\n",
+      "Torchvision Version:  0.8.2+cu110\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -23,19 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "3c485356",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyTorch Version:  1.7.1+cu110\n",
-      "Torchvision Version:  0.8.2+cu110\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TransferLearning of ATTACK --> \n",
     "# VS From Scratch\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "17d035d7",
    "metadata": {},
    "outputs": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "5363b052",
    "metadata": {},
    "outputs": [],
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "2d0672bf",
    "metadata": {},
    "outputs": [
@@ -198,7 +200,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "b549368e",
    "metadata": {},
    "outputs": [
@@ -281,18 +283,6 @@
       "\t fc.weight\n",
       "\t fc.bias\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-17 03:29:28.589432: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-12-17 03:29:28.868745: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-12-17 03:29:29.950203: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda/lib64:/usr/local/nccl2/lib:/usr/local/cuda/extras/CUPTI/lib64\n",
-      "2022-12-17 03:29:29.950379: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda/lib64:/usr/local/nccl2/lib:/usr/local/cuda/extras/CUPTI/lib64\n",
-      "2022-12-17 03:29:29.950397: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
     }
    ],
    "source": [
@@ -325,19 +315,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "5b6eca3e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_24869/1496941927.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m train(model_load, train_loader, train_criterion, val_loader, val_criterion, \n\u001b[0m\u001b[1;32m      2\u001b[0m               \u001b[0moptimizer_adv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwriter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                  \u001b[0mPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpgd_attack\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"cuda\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                   n_steps_show=1000)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_loader' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [0/10]\t\n",
+      "Epoch [1/10]\t Training Loss: 2.0562123133398384\t lr: 0.001\n",
+      "Epoch [1/10]\t Validation Loss: 17.87442981140523\t lr: 0.001\n",
+      "Epoch [1/10]\t\n",
+      "Epoch [2/10]\t Training Loss: 1.7340256417803752\t lr: 0.001\n",
+      "Epoch [2/10]\t Validation Loss: 13.489908761615995\t lr: 0.001\n",
+      "Epoch [2/10]\t\n",
+      "Epoch [3/10]\t Training Loss: 1.6726093176380752\t lr: 0.001\n",
+      "Epoch [3/10]\t Validation Loss: 15.941841717007794\t lr: 0.001\n",
+      "Epoch [3/10]\t\n",
+      "Epoch [4/10]\t Training Loss: 1.6331837945582006\t lr: 0.001\n",
+      "Epoch [4/10]\t Validation Loss: 15.829559579680238\t lr: 0.001\n",
+      "Epoch [4/10]\t\n",
+      "Epoch [5/10]\t Training Loss: 1.6057883257146381\t lr: 0.001\n",
+      "Epoch [5/10]\t Validation Loss: 14.965834895266763\t lr: 0.001\n",
+      "Epoch [5/10]\t\n",
+      "Epoch [6/10]\t Training Loss: 1.5791728139838295\t lr: 0.001\n",
+      "Epoch [6/10]\t Validation Loss: 14.379839571216438\t lr: 0.001\n",
+      "Epoch [6/10]\t\n",
+      "Epoch [7/10]\t Training Loss: 1.5702302800419996\t lr: 0.001\n",
+      "Epoch [7/10]\t Validation Loss: 17.246113656442375\t lr: 0.001\n",
+      "Epoch [7/10]\t\n",
+      "Epoch [8/10]\t Training Loss: 1.5551093408213856\t lr: 0.001\n",
+      "Epoch [8/10]\t Validation Loss: 11.70585225503656\t lr: 0.001\n",
+      "Epoch [8/10]\t\n",
+      "Epoch [9/10]\t Training Loss: 1.5441971822163028\t lr: 0.001\n",
+      "Epoch [9/10]\t Validation Loss: 14.479350910911077\t lr: 0.001\n",
+      "Epoch [9/10]\t\n",
+      "Epoch [10/10]\t Training Loss: 1.5288016357080405\t lr: 0.001\n",
+      "Epoch [10/10]\t Validation Loss: 9.890578173383881\t lr: 0.001\n",
+      "Epoch [9/10]\t Time Taken: 190.4605775753657 minutes\n"
      ]
     }
    ],
@@ -350,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c53b18a7",
    "metadata": {},
    "outputs": [
@@ -359,7 +375,7 @@
      "output_type": "stream",
      "text": [
       "the clean accuracy is \n",
-      "Accuracy of the network on the 10000 test images: 11 %\n"
+      "Accuracy of the network on the 10000 test images: 32 %\n"
      ]
     }
    ],
@@ -370,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a5aec8dc",
    "metadata": {},
    "outputs": [
@@ -380,7 +396,7 @@
      "text": [
       "PGD\n",
       "[Model loaded]\n",
-      "Acc: 74.38 %\n",
+      "Acc: 64.36 %\n",
       "adv model\n"
      ]
     }
@@ -395,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "a9574311",
    "metadata": {},
    "outputs": [
@@ -405,7 +421,7 @@
      "text": [
       "fgsm\n",
       "[Model loaded]\n",
-      "Acc: 74.31 %\n",
+      "Acc: 64.35 %\n",
       "adv model\n"
      ]
     }
@@ -420,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "adab64fd",
    "metadata": {},
    "outputs": [
@@ -430,7 +446,7 @@
      "text": [
       "nifgsm\n",
       "[Model loaded]\n",
-      "Acc: 74.03 %\n",
+      "Acc: 64.19 %\n",
       "adv model\n"
      ]
     }
@@ -445,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "cd0c195b",
    "metadata": {},
    "outputs": [
@@ -455,7 +471,7 @@
      "text": [
       "vmifgsm\n",
       "[Model loaded]\n",
-      "Acc: 74.00 %\n",
+      "Acc: 63.91 %\n",
       "adv model\n"
      ]
     }
