--- a/Experment3_resnet18.ipynb
+++ b/Experment3_resnet18.ipynb
@@ -124,6 +124,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "785a90ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "10e62cbe",
    "metadata": {},
@@ -806,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "045da609",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1108,40 @@
       "Epoch [88/100]\t\n",
       "Epoch [89/100]\t Training Loss: 0.9780394122423723\t lr: 0.001\n",
       "Epoch [89/100]\t Validation Loss: 47.0436958119839\t lr: 0.001\n",
-      "Epoch [89/100]\t\n"
+      "Epoch [89/100]\t\n",
+      "Epoch [90/100]\t Training Loss: 0.9702857868445803\t lr: 0.001\n",
+      "Epoch [90/100]\t Validation Loss: 54.49696784683421\t lr: 0.001\n",
+      "Epoch [90/100]\t\n",
+      "Epoch [91/100]\t Training Loss: 0.9539037119702\t lr: 0.001\n",
+      "Epoch [91/100]\t Validation Loss: 60.26310343682012\t lr: 0.001\n",
+      "Epoch [91/100]\t\n",
+      "Epoch [92/100]\t Training Loss: 0.9629013395065542\t lr: 0.001\n",
+      "Epoch [92/100]\t Validation Loss: 56.33812153490284\t lr: 0.001\n",
+      "Epoch [92/100]\t\n",
+      "Epoch [93/100]\t Training Loss: 0.9536770408415733\t lr: 0.001\n",
+      "Epoch [93/100]\t Validation Loss: 48.80508306962025\t lr: 0.001\n",
+      "Epoch [93/100]\t\n",
+      "Epoch [94/100]\t Training Loss: 0.9489405325916417\t lr: 0.001\n",
+      "Epoch [94/100]\t Validation Loss: 61.63460395909563\t lr: 0.001\n",
+      "Epoch [94/100]\t\n",
+      "Epoch [95/100]\t Training Loss: 0.9398615610264146\t lr: 0.001\n",
+      "Epoch [95/100]\t Validation Loss: 52.71930646292771\t lr: 0.001\n",
+      "Epoch [95/100]\t\n",
+      "Epoch [96/100]\t Training Loss: 0.925951262111859\t lr: 0.001\n",
+      "Epoch [96/100]\t Validation Loss: 51.04469869106631\t lr: 0.001\n",
+      "Epoch [96/100]\t\n",
+      "Epoch [97/100]\t Training Loss: 0.9253335666778447\t lr: 0.001\n",
+      "Epoch [97/100]\t Validation Loss: 58.77072133897226\t lr: 0.001\n",
+      "Epoch [97/100]\t\n",
+      "Epoch [98/100]\t Training Loss: 0.925585765515447\t lr: 0.001\n",
+      "Epoch [98/100]\t Validation Loss: 56.91060237643085\t lr: 0.001\n",
+      "Epoch [98/100]\t\n",
+      "Epoch [99/100]\t Training Loss: 0.9074478097583937\t lr: 0.001\n",
+      "Epoch [99/100]\t Validation Loss: 70.28126559680021\t lr: 0.001\n",
+      "Epoch [99/100]\t\n",
+      "Epoch [100/100]\t Training Loss: 0.8988737995972109\t lr: 0.001\n",
+      "Epoch [100/100]\t Validation Loss: 64.4349586873115\t lr: 0.001\n",
+      "Epoch [99/100]\t Time Taken: 2797.355981926123 minutes\n"
      ]
     }
    ],
@@ -1100,10 +1154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c84bfa9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch Version:  1.7.1+cu110\n",
+      "Torchvision Version:  0.8.2+cu110\n",
+      "the clean accuracy is \n",
+      "Accuracy of the network on the 10000 test images: 1 %\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"the clean accuracy is \")\n",
     "test(val_loader, net_scratch_adv)"
@@ -1111,10 +1176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0405fffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PGD\n",
+      "[Model loaded]\n",
+      "Acc: 64.19 %\n",
+      "adv model\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"PGD\")\n",
     "pgd_attack_transfer = generate_adv(model_scratch, \"pgd\")\n",
@@ -1125,10 +1201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ca255b50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fgsm\n",
+      "[Model loaded]\n",
+      "Acc: 58.32 %\n",
+      "adv model\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"fgsm\")\n",
     "fgsm_attack_transfer = generate_adv(model_scratch, \"fgsm\")\n",
@@ -1139,10 +1226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "98d7c7fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nifgsm\n",
+      "[Model loaded]\n",
+      "Acc: 67.70 %\n",
+      "adv model\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"nifgsm\")\n",
     "nifgsm_attack_transfer = generate_adv(model_scratch, \"nifgsm\")\n",
@@ -1153,10 +1251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4e540e92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vmifgsm\n",
+      "[Model loaded]\n",
+      "Acc: 70.20 %\n",
+      "adv model\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"vmifgsm\")\n",
     "vmifgsm_attack_transfer = generate_adv(model_scratch, \"vmifgsm\")\n",
