--- a/Experiment1.ipynb
+++ b/Experiment1.ipynb
@@ -93,7 +93,7 @@
    "id": "af0dee4e",
    "metadata": {},
    "source": [
-    "# train standard model todo: add more epochs maybe 100"
+    "# Train shallow CNN model "
    ]
   },
   {
@@ -586,7 +586,7 @@
    "id": "ffb31099",
    "metadata": {},
    "source": [
-    "# Adversarial Training"
+    "# Adversarial Training on shallow CNN model by PGD"
    ]
   },
   {
@@ -1643,7 +1643,7 @@
    "id": "7d350815",
    "metadata": {},
    "source": [
-    "# TODO: Adversarial Training by nifgsm"
+    "# Adversarial Training by nifgsm"
    ]
   },
   {
@@ -2096,7 +2096,7 @@
    "id": "1e8d1d9d",
    "metadata": {},
    "source": [
-    "# TODO: Adversarial Training by vmifgsm"
+    "# Adversarial Training by vmifgsm"
    ]
   },
   {
