--- a/Experiment2_on_10_epochs.ipynb
+++ b/Experiment2_on_10_epochs.ipynb
@@ -5,7 +5,7 @@
    "id": "98059ee5",
    "metadata": {},
    "source": [
-    "# TODO Compared with from scratch standard training and attacks "
+    "# Resnet 18 on CIFAR 10 with 10 epochs adversarial training "
    ]
   },
   {
