--- a/Experiment3_shallow.ipynb
+++ b/Experiment3_shallow.ipynb
@@ -80,7 +80,7 @@
    "id": "af0dee4e",
    "metadata": {},
    "source": [
-    "# train standard model todo: add more epochs maybe 100"
+    "# Train shallow CNN on CIFAR 100"
    ]
   },
   {
@@ -551,7 +551,7 @@
    "id": "ffb31099",
    "metadata": {},
    "source": [
-    "# Adversarial Training"
+    "# Adversarial Training on PGD"
    ]
   },
   {
@@ -1039,7 +1039,7 @@
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import copy\n",
-    "net_adv = copy.deepcopy(net_ori) #am I doing correct? \n",
+    "net_adv = copy.deepcopy(net_ori) \n",
     "for param in net_adv.parameters():\n",
     "    print(param)"
    ]
