--- a/Experment2_part2.ipynb
+++ b/Experment2_part2.ipynb
@@ -5,7 +5,7 @@
    "id": "98059ee5",
    "metadata": {},
    "source": [
-    "# TODO Compared with from scratch standard training and attacks "
+    "# Train on Resnet18 from scratch  "
    ]
   },
   {
@@ -647,21 +647,19 @@
    "id": "8ca31be2",
    "metadata": {},
    "source": [
-    "# TODO Compared with from scratch adversarial training and attacks "
+    "# Adversarail Training on Resnet 18 from scratch on PGD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b9addb1f",
+   "execution_count": null,
+   "id": "6c63b524",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import copy\n",
-    "net_scratch_adv = copy.deepcopy(model_scratch) #am I doing correct? \n",
-    "# for param in net_adv.parameters():\n",
-    "#     print(param)"
+    "net_scratch_adv = copy.deepcopy(model_scratch) "
    ]
   },
   {
