--- a/Experiment2_Part1.ipynb
+++ b/Experiment2_Part1.ipynb
@@ -53,7 +53,7 @@
    "id": "96ea736b",
    "metadata": {},
    "source": [
-    "# Transfer Learning "
+    "# Transfer Learning  Finetune FC layer"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "id": "fce4802c",
    "metadata": {},
    "source": [
-    "# Adversarial Training "
+    "# Adversarial Training on PGD"
    ]
   },
   {
@@ -643,9 +643,7 @@
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import copy\n",
-    "net_adv = copy.deepcopy(model_transfer) #am I doing correct? \n",
-    "# for param in net_adv.parameters():\n",
-    "#     print(param)"
+    "net_adv = copy.deepcopy(model_transfer) \n"
    ]
   },
   {
