--- a/Experment3_resnet18.ipynb
+++ b/Experment3_resnet18.ipynb
@@ -5,7 +5,7 @@
    "id": "98059ee5",
    "metadata": {},
    "source": [
-    "# TODO Compared with from scratch standard training and attacks "
+    "# Resnet 18 from scratch on standard training and attacks on CIFAR 100 "
    ]
   },
   {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "785a90ed",
+   "id": "cbea6acd",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
    "id": "8ca31be2",
    "metadata": {},
    "source": [
-    "# TODO Compared with from scratch adversarial training and attacks "
+    "# ResNet 18 from scratch on adversarial training and attacks on CIFAR 100"
    ]
   },
   {
